# smile-detector

./: .gitignore  Makefile
.deprecated-devcontainer/: Dockerfile  README  devcontainer.json
.deprecated-devcontainer/host/test-x11-macos-docker-fwd/: Running-GUI-Containers.md
.deprecated/.deprecated-devcontainer/: README  post-create.sh
.deprecated/.deprecated-devcontainer/host/: get-pyenv.sh
.deprecated/local-setup-scripts/: install-tkinter.sh
.devcontainer/: devcontainer.json  post-create.sh  regenerate-requirements.sh
.devcontainer/host/test-x11-macos-docker-fwd/: Dockerfile  run-xeyes-macos.sh
docs/: MacOS-X11-Docker.md  Readme.md  Running-GUI-Containers.md  System-Design-Notes.md  Writeup.md
javascript/react-video-app/: package-lock.json  package.json
javascript/react-video-app/src/: App.tsx  index.tsx
javascript/react-video-app/src/components/: CoordinatesDisplay.tsx  VideoFeed.tsx
python/: database_manager.py  main.py  pyproject.toml  requirements.txt  session_manager.py
python/conf/: config.json  gunicorn.conf.py
python/smile_detector/: app.py  app_config.py  database_manager.py  filesystem_lock.py  main.py  session_manager.py
python/test/: test_export.py
scripts/: cleanup-db.py  initialize-react-project.sh  install-tkinter.sh  kill-orphan-processes.sh  rebuild-all.sh  run-all.sh  run-gunicorn  run-gunicorn.sh  run-mypy-linter.sh  run-react.sh  setup-venv.sh
scripts/for-posterity/: README  initialize-react-project.sh  install-brew-packages.sh
