[project]
name = "smile_detector"
version = "0.1"
description = "Detects a smiling face from a webcam feed"
authors = [
   {name = "Josh Billings", email = "jdb1025777@gmail.com"},
]

license = "GPL-3.0-or-later"
requires-python = ">= 3.13"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
smiledetector = "smile_detector.main:debug"


[tool.mypy]
python_version = "3.11"
check_untyped_defs = true