[project]
name = "smile-detector"
version = "0.1"
description = "Detects a smiling face from a webcam feed"
authors = ["Josh Billings <jdb1025777@gmail.com>"]
license = "GPL-3.0-or-later"
license-files = 
requires-python = ">= 3.11"
dependencies = [pillow, tkinter] # todo

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"