[project]
name = "smile_detector"
version = "0.1"
description = "Detects a smiling face from a webcam feed"
authors = [
   {name = "Josh Billings", email = "jdb1025777@gmail.com"},
]

license = "GPL-3.0-or-later"
requires-python = ">= 3.13"
# todo: do this better than reqirements.txt
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["smile_detector"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true